[package]
name = "usb-remote-tcpip"
version = "0.1.0"
edition = "2021"
default-run = "usb-remote-tcpip"

[dependencies]
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"

# Server dependencies — only for Mac (unix-ish), not for Windows cross-compiles
[target.'cfg(not(target_os = "windows"))'.dependencies]
rusb = "0.9"
tokio = { version = "1", features = ["net", "io-util", "macros", "rt-multi-thread", "sync"] }